--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    Olá mundo
+    <a href="/json2dash.json">/json2dash.json</a>
+    <a href="/json2dash2.json">/json2dash2.json</a>
 </body>
 </html>
